INCDIR=${abs_top_srcdir}/include/mcld
LIBDIR=${abs_top_srcdir}/lib
GENDIR=${abs_top_builddir}/include/mcld

AM_CXXFLAGS = \
	@NO_VARIADIC_MACROS@ \
	@NO_COVERED_SWITCH_DEFAULT@ \
	@NO_C99_EXTENSIONS@

BUILT_SOURCES = ScriptParser.cc
AM_YFLAGS = -d
AM_LFLAGS = -olex.yy.c

HEADER = ${INCDIR}/AttributeOption.h \
	${INCDIR}/BitcodeOption.h \
	${INCDIR}/Environment.h \
	${INCDIR}/GeneralOptions.h \
	${INCDIR}/InputTree.h \
	${INCDIR}/IRBuilder.h \
	${INCDIR}/LinkerConfig.h \
	${INCDIR}/Linker.h \
	${INCDIR}/LinkerScript.h \
	${INCDIR}/Module.h \
	${INCDIR}/TargetOptions.h \
	${INCDIR}/ADT/BinTree.h \
	${INCDIR}/ADT/Flags.h \
	${INCDIR}/ADT/HashBase.h \
	${INCDIR}/ADT/HashBase.tcc \
	${INCDIR}/ADT/HashEntryFactory.h \
	${INCDIR}/ADT/HashEntry.h \
	${INCDIR}/ADT/HashEntry.tcc \
	${INCDIR}/ADT/HashIterator.h \
	${INCDIR}/ADT/HashTable.h \
	${INCDIR}/ADT/HashTable.tcc \
	${INCDIR}/ADT/SizeTraits.h \
	${INCDIR}/ADT/StringEntry.h \
	${INCDIR}/ADT/StringEntry.tcc \
	${INCDIR}/ADT/StringHash.h \
	${INCDIR}/ADT/TreeAllocator.h \
	${INCDIR}/ADT/TreeBase.h \
	${INCDIR}/ADT/TypeTraits.h \
	${INCDIR}/ADT/Uncopyable.h \
	${INCDIR}/CodeGen/MCLinker.h \
	${INCDIR}/CodeGen/TargetMachine.h \
	${INCDIR}/Fragment/AlignFragment.h \
	${INCDIR}/Fragment/FGEdge.h \
	${INCDIR}/Fragment/FGNode.h \
	${INCDIR}/Fragment/FillFragment.h \
	${INCDIR}/Fragment/Fragment.h \
	${INCDIR}/Fragment/FragmentGraph.h \
	${INCDIR}/Fragment/FragmentRef.h \
	${INCDIR}/Fragment/NullFragment.h \
	${INCDIR}/Fragment/RegionFragment.h \
	${INCDIR}/Fragment/Relocation.h \
	${INCDIR}/Fragment/Stub.h \
	${INCDIR}/Fragment/TargetFragment.h \
	${INCDIR}/LD/Archive.h \
	${INCDIR}/LD/ArchiveReader.h \
	${INCDIR}/LD/BinaryReader.h \
	${INCDIR}/LD/BranchIslandFactory.h \
	${INCDIR}/LD/BranchIsland.h \
	${INCDIR}/LD/BSDArchiveReader.h \
	${INCDIR}/LD/DiagAttribute.inc \
	${INCDIR}/LD/DiagCommonKinds.inc \
	${INCDIR}/LD/DiagGOTPLT.inc \
	${INCDIR}/LD/DiagLayouts.inc \
	${INCDIR}/LD/DiagLDScript.inc \
	${INCDIR}/LD/DiagnosticEngine.h \
	${INCDIR}/LD/Diagnostic.h \
	${INCDIR}/LD/DiagnosticInfos.h \
	${INCDIR}/LD/DiagnosticLineInfo.h \
	${INCDIR}/LD/DiagnosticPrinter.h \
	${INCDIR}/LD/DiagReaders.inc \
	${INCDIR}/LD/DiagRelocations.inc \
	${INCDIR}/LD/DiagSymbolResolutions.inc \
	${INCDIR}/LD/DWARFLineInfo.h \
	${INCDIR}/LD/DynObjFileFormat.h \
	${INCDIR}/LD/DynObjReader.h \
	${INCDIR}/LD/EhFrame.h \
	${INCDIR}/LD/EhFrameHdr.h \
	${INCDIR}/LD/EhFrameReader.h \
	${INCDIR}/LD/ELFBinaryReader.h \
	${INCDIR}/LD/ELFDynObjFileFormat.h \
	${INCDIR}/LD/ELFDynObjReader.h \
	${INCDIR}/LD/ELFExecFileFormat.h \
	${INCDIR}/LD/ELFFileFormat.h \
	${INCDIR}/LD/ELFObjectFileFormat.h \
	${INCDIR}/LD/ELFObjectReader.h \
	${INCDIR}/LD/ELFObjectWriter.h \
	${INCDIR}/LD/ELFReader.h \
	${INCDIR}/LD/ELFReaderIf.h \
	${INCDIR}/LD/ELFSegmentFactory.h \
	${INCDIR}/LD/ELFSegment.h \
	${INCDIR}/LD/GNUArchiveReader.h \
	${INCDIR}/LD/Group.h \
	${INCDIR}/LD/GroupReader.h \
	${INCDIR}/LD/LDContext.h \
	${INCDIR}/LD/LDFileFormat.h \
	${INCDIR}/LD/LDReader.h \
	${INCDIR}/LD/LDSection.h \
	${INCDIR}/LD/LDSymbol.h \
	${INCDIR}/LD/MsgHandler.h \
	${INCDIR}/LD/NamePool.h \
	${INCDIR}/LD/ObjectReader.h \
	${INCDIR}/LD/ObjectWriter.h \
	${INCDIR}/LD/RelocationFactory.h \
	${INCDIR}/LD/Relocator.h \
	${INCDIR}/LD/RelocData.h \
	${INCDIR}/LD/ResolveInfo.h \
	${INCDIR}/LD/Resolver.h \
	${INCDIR}/LD/SectionData.h \
	${INCDIR}/LD/SectionSymbolSet.h \
	${INCDIR}/LD/StaticResolver.h \
	${INCDIR}/LD/StubFactory.h \
	${INCDIR}/LD/TextDiagnosticPrinter.h \
	${INCDIR}/MC/Attribute.h \
	${INCDIR}/MC/AttributeSet.h \
	${INCDIR}/MC/CommandAction.h \
	${INCDIR}/MC/ContextFactory.h \
	${INCDIR}/MC/FileAction.h \
	${INCDIR}/MC/InputAction.h \
	${INCDIR}/MC/InputBuilder.h \
	${INCDIR}/MC/InputFactory.h \
	${INCDIR}/MC/Input.h \
	${INCDIR}/MC/MCLDDirectory.h \
	${INCDIR}/MC/SearchDirs.h \
	${INCDIR}/MC/SymbolCategory.h \
	${INCDIR}/MC/ZOption.h \
	${INCDIR}/Object/ObjectBuilder.h \
	${INCDIR}/Object/ObjectLinker.h \
	${INCDIR}/Object/SectionMap.h \
	${INCDIR}/Script/AssertCmd.h \
	${INCDIR}/Script/Assignment.h \
	${INCDIR}/Script/BinaryOp.h \
	${INCDIR}/Script/EntryCmd.h \
	${INCDIR}/Script/ExprToken.h \
	${INCDIR}/Script/FileToken.h \
	${INCDIR}/Script/FlexLexer.h \
	${INCDIR}/Script/GroupCmd.h \
	${INCDIR}/Script/InputSectDesc.h \
	${INCDIR}/Script/InputToken.h \
	${INCDIR}/Script/NameSpec.h \
	${INCDIR}/Script/NullaryOp.h \
	${INCDIR}/Script/Operand.h \
	${INCDIR}/Script/Operator.h \
	${INCDIR}/Script/OutputArchCmd.h \
	${INCDIR}/Script/OutputCmd.h \
	${INCDIR}/Script/OutputFormatCmd.h \
	${INCDIR}/Script/OutputSectDesc.h \
	${INCDIR}/Script/RpnEvaluator.h \
	${INCDIR}/Script/RpnExpr.h \
	${INCDIR}/Script/ScriptCommand.h \
	${INCDIR}/Script/ScriptFile.h \
	${INCDIR}/Script/ScriptReader.h \
	${INCDIR}/Script/ScriptScanner.h \
	${INCDIR}/Script/SearchDirCmd.h \
	${INCDIR}/Script/SectionsCmd.h \
	${INCDIR}/Script/StringList.h \
	${INCDIR}/Script/StrToken.h \
	${INCDIR}/Script/TernaryOp.h \
	${INCDIR}/Script/UnaryOp.h \
	${INCDIR}/Script/WildcardPattern.h \
	${INCDIR}/Support/Allocators.h \
	${INCDIR}/Support/CommandLine.h \
	${INCDIR}/Support/Directory.h \
	${INCDIR}/Support/ELF.h \
	${INCDIR}/Support/FileHandle.h \
	${INCDIR}/Support/FileSystem.h \
	${INCDIR}/Support/GCFactory.h \
	${INCDIR}/Support/GCFactoryListTraits.h \
	${INCDIR}/Support/HandleToArea.h \
	${INCDIR}/Support/LEB128.h \
	${INCDIR}/Support/MemoryAreaFactory.h \
	${INCDIR}/Support/MemoryArea.h \
	${INCDIR}/Support/MemoryRegion.h \
	${INCDIR}/Support/MsgHandling.h \
	${INCDIR}/Support/PathCache.h \
	${INCDIR}/Support/Path.h \
	${INCDIR}/Support/raw_mem_ostream.h \
	${INCDIR}/Support/raw_ostream.h \
	${INCDIR}/Support/RealPath.h \
	${INCDIR}/Support/RegionFactory.h \
	${INCDIR}/Support/Space.h \
	${INCDIR}/Support/SystemUtils.h \
	${INCDIR}/Support/Target.h \
	${INCDIR}/Support/TargetRegistry.h \
	${INCDIR}/Support/TargetSelect.h \
	${INCDIR}/Support/ToolOutputFile.h \
	${INCDIR}/Support/UniqueGCFactory.h \
	${INCDIR}/Target/DarwinLDBackend.h \
	${INCDIR}/Target/ELFAttribute.h \
	${INCDIR}/Target/ELFAttributeData.h \
	${INCDIR}/Target/ELFAttributeValue.h \
	${INCDIR}/Target/ELFDynamic.h \
	${INCDIR}/Target/ELFDynamic.tcc \
	${INCDIR}/Target/ELFEmulation.h \
	${INCDIR}/Target/ELFMCLinker.h \
	${INCDIR}/Target/GNUInfo.h \
	${INCDIR}/Target/GNULDBackend.h \
	${INCDIR}/Target/GOT.h \
	${INCDIR}/Target/OutputRelocSection.h \
	${INCDIR}/Target/PLT.h \
	${INCDIR}/Target/KeyEntryMap.h \
	${INCDIR}/Target/TargetLDBackend.h

SOURCE = ${LIBDIR}/ADT/StringEntry.cpp \
	${LIBDIR}/CodeGen/MCLDTargetMachine.cpp \
	${LIBDIR}/CodeGen/MCLinker.cpp \
	${LIBDIR}/Core/AttributeOption.cpp \
	${LIBDIR}/Core/BitcodeOption.cpp \
	${LIBDIR}/Core/Environment.cpp \
	${LIBDIR}/Core/GeneralOptions.cpp \
	${LIBDIR}/Core/InputTree.cpp \
	${LIBDIR}/Core/IRBuilder.cpp \
	${LIBDIR}/Core/LinkerConfig.cpp \
	${LIBDIR}/Core/Linker.cpp \
	${LIBDIR}/Core/LinkerScript.cpp \
	${LIBDIR}/Core/Module.cpp \
	${LIBDIR}/Core/TargetOptions.cpp \
	${LIBDIR}/Fragment/AlignFragment.cpp \
	${LIBDIR}/Fragment/FGNode.cpp \
	${LIBDIR}/Fragment/FillFragment.cpp \
	${LIBDIR}/Fragment/Fragment.cpp \
        ${LIBDIR}/Fragment/FragmentGraph.cpp \
	${LIBDIR}/Fragment/FragmentRef.cpp \
	${LIBDIR}/Fragment/NullFragment.cpp \
	${LIBDIR}/Fragment/RegionFragment.cpp \
	${LIBDIR}/Fragment/Relocation.cpp \
	${LIBDIR}/Fragment/Stub.cpp \
	${LIBDIR}/LD/Archive.cpp \
	${LIBDIR}/LD/ArchiveReader.cpp \
	${LIBDIR}/LD/BinaryReader.cpp \
	${LIBDIR}/LD/BranchIsland.cpp \
	${LIBDIR}/LD/BranchIslandFactory.cpp \
	${LIBDIR}/LD/BSDArchiveReader.cpp \
	${LIBDIR}/LD/Diagnostic.cpp \
	${LIBDIR}/LD/DiagnosticEngine.cpp \
	${LIBDIR}/LD/DiagnosticInfos.cpp \
	${LIBDIR}/LD/DiagnosticLineInfo.cpp \
	${LIBDIR}/LD/DiagnosticPrinter.cpp \
	${LIBDIR}/LD/DWARFLineInfo.cpp \
	${LIBDIR}/LD/DynObjReader.cpp \
	${LIBDIR}/LD/EhFrame.cpp \
	${LIBDIR}/LD/EhFrameHdr.cpp \
	${LIBDIR}/LD/EhFrameReader.cpp \
	${LIBDIR}/LD/ELFBinaryReader.cpp \
	${LIBDIR}/LD/ELFDynObjFileFormat.cpp \
	${LIBDIR}/LD/ELFDynObjReader.cpp \
	${LIBDIR}/LD/ELFExecFileFormat.cpp \
	${LIBDIR}/LD/ELFFileFormat.cpp \
	${LIBDIR}/LD/ELFObjectReader.cpp \
	${LIBDIR}/LD/ELFObjectWriter.cpp \
	${LIBDIR}/LD/ELFReader.cpp \
	${LIBDIR}/LD/ELFReaderIf.cpp \
	${LIBDIR}/LD/ELFSegment.cpp \
	${LIBDIR}/LD/ELFSegmentFactory.cpp \
	${LIBDIR}/LD/GNUArchiveReader.cpp \
	${LIBDIR}/LD/GroupReader.cpp \
	${LIBDIR}/LD/LDContext.cpp \
	${LIBDIR}/LD/LDFileFormat.cpp \
	${LIBDIR}/LD/LDReader.cpp \
	${LIBDIR}/LD/LDSection.cpp \
	${LIBDIR}/LD/LDSymbol.cpp \
	${LIBDIR}/LD/MsgHandler.cpp \
	${LIBDIR}/LD/NamePool.cpp \
	${LIBDIR}/LD/ObjectWriter.cpp \
	${LIBDIR}/LD/RelocationFactory.cpp \
	${LIBDIR}/LD/Relocator.cpp \
	${LIBDIR}/LD/RelocData.cpp \
	${LIBDIR}/LD/ResolveInfo.cpp \
	${LIBDIR}/LD/Resolver.cpp \
	${LIBDIR}/LD/SectionData.cpp \
	${LIBDIR}/LD/SectionSymbolSet.cpp \
	${LIBDIR}/LD/StaticResolver.cpp \
	${LIBDIR}/LD/StubFactory.cpp \
	${LIBDIR}/LD/TextDiagnosticPrinter.cpp \
	${LIBDIR}/MC/Attribute.cpp \
	${LIBDIR}/MC/AttributeSet.cpp \
	${LIBDIR}/MC/CommandAction.cpp \
	${LIBDIR}/MC/ContextFactory.cpp \
	${LIBDIR}/MC/FileAction.cpp \
	${LIBDIR}/MC/InputAction.cpp \
	${LIBDIR}/MC/InputBuilder.cpp \
	${LIBDIR}/MC/Input.cpp \
	${LIBDIR}/MC/InputFactory.cpp \
	${LIBDIR}/MC/MCLDDirectory.cpp \
	${LIBDIR}/MC/SearchDirs.cpp \
	${LIBDIR}/MC/SymbolCategory.cpp \
	${LIBDIR}/MC/ZOption.cpp \
	${LIBDIR}/Object/ObjectBuilder.cpp \
	${LIBDIR}/Object/ObjectLinker.cpp \
	${LIBDIR}/Object/SectionMap.cpp \
	${LIBDIR}/Script/AssertCmd.cpp \
	${LIBDIR}/Script/Assignment.cpp \
	${LIBDIR}/Script/BinaryOp.cpp \
	${LIBDIR}/Script/EntryCmd.cpp \
	${LIBDIR}/Script/FileToken.cpp \
	${LIBDIR}/Script/GroupCmd.cpp \
	${LIBDIR}/Script/InputSectDesc.cpp \
	${LIBDIR}/Script/InputToken.cpp \
	${LIBDIR}/Script/NameSpec.cpp \
	${LIBDIR}/Script/NullaryOp.cpp \
	${LIBDIR}/Script/Operand.cpp \
	${LIBDIR}/Script/Operator.cpp \
	${LIBDIR}/Script/OutputArchCmd.cpp \
	${LIBDIR}/Script/OutputCmd.cpp \
	${LIBDIR}/Script/OutputFormatCmd.cpp \
	${LIBDIR}/Script/OutputSectDesc.cpp \
	${LIBDIR}/Script/RpnEvaluator.cpp \
	${LIBDIR}/Script/RpnExpr.cpp \
	${LIBDIR}/Script/ScriptCommand.cpp \
	${LIBDIR}/Script/ScriptFile.cpp \
	${LIBDIR}/Script/ScriptParser.yy \
	${LIBDIR}/Script/ScriptReader.cpp \
	${LIBDIR}/Script/ScriptScanner.ll \
	${LIBDIR}/Script/SearchDirCmd.cpp \
	${LIBDIR}/Script/SectionsCmd.cpp \
	${LIBDIR}/Script/StringList.cpp \
	${LIBDIR}/Script/StrToken.cpp \
	${LIBDIR}/Script/TernaryOp.cpp \
	${LIBDIR}/Script/UnaryOp.cpp \
	${LIBDIR}/Script/WildcardPattern.cpp \
	${LIBDIR}/Support/CommandLine.cpp \
	${LIBDIR}/Support/Directory.cpp \
	${LIBDIR}/Support/FileHandle.cpp \
	${LIBDIR}/Support/FileSystem.cpp \
	${LIBDIR}/Support/HandleToArea.cpp \
	${LIBDIR}/Support/LEB128.cpp \
	${LIBDIR}/Support/MemoryArea.cpp \
	${LIBDIR}/Support/MemoryAreaFactory.cpp \
	${LIBDIR}/Support/MemoryRegion.cpp \
	${LIBDIR}/Support/MsgHandling.cpp \
	${LIBDIR}/Support/Path.cpp \
	${LIBDIR}/Support/raw_mem_ostream.cpp \
	${LIBDIR}/Support/raw_ostream.cpp \
	${LIBDIR}/Support/RealPath.cpp \
	${LIBDIR}/Support/RegionFactory.cpp \
	${LIBDIR}/Support/Space.cpp \
	${LIBDIR}/Support/SystemUtils.cpp \
	${LIBDIR}/Support/Target.cpp \
	${LIBDIR}/Support/TargetRegistry.cpp \
	${LIBDIR}/Support/ToolOutputFile.cpp \
	${LIBDIR}/Support/Unix \
	${LIBDIR}/Support/Unix/FileSystem.inc \
	${LIBDIR}/Support/Unix/PathV3.inc \
	${LIBDIR}/Support/Unix/System.inc \
	${LIBDIR}/Support/Windows \
	${LIBDIR}/Support/Windows/FileSystem.inc \
	${LIBDIR}/Support/Windows/PathV3.inc \
	${LIBDIR}/Support/Windows/System.inc \
	${LIBDIR}/Target/ELFAttribute.cpp \
	${LIBDIR}/Target/ELFAttributeData.cpp \
	${LIBDIR}/Target/ELFAttributeValue.cpp \
	${LIBDIR}/Target/ELFDynamic.cpp \
	${LIBDIR}/Target/ELFEmulation.cpp \
	${LIBDIR}/Target/ELFMCLinker.cpp \
	${LIBDIR}/Target/GNUInfo.cpp \
	${LIBDIR}/Target/GNULDBackend.cpp \
	${LIBDIR}/Target/GOT.cpp \
	${LIBDIR}/Target/OutputRelocSection.cpp \
	${LIBDIR}/Target/PLT.cpp \
	${LIBDIR}/Target/TargetLDBackend.cpp \
	${LIBDIR}/Target/AArch64/AArch64Diagnostic.cpp \
	${LIBDIR}/Target/AArch64/AArch64ELFDynamic.cpp \
	${LIBDIR}/Target/AArch64/AArch64ELFDynamic.h \
	${LIBDIR}/Target/AArch64/AArch64ELFMCLinker.cpp \
	${LIBDIR}/Target/AArch64/AArch64ELFMCLinker.h \
	${LIBDIR}/Target/AArch64/AArch64Emulation.cpp \
	${LIBDIR}/Target/AArch64/AArch64GNUInfo.h \
	${LIBDIR}/Target/AArch64/AArch64GOT.h \
	${LIBDIR}/Target/AArch64/AArch64.h \
	${LIBDIR}/Target/AArch64/AArch64LDBackend.h \
	${LIBDIR}/Target/AArch64/AArch64MCLinker.cpp \
	${LIBDIR}/Target/AArch64/AArch64PLT.h \
	${LIBDIR}/Target/AArch64/AArch64RelocationFunctions.h \
	${LIBDIR}/Target/AArch64/AArch64Relocator.cpp \
	${LIBDIR}/Target/AArch64/AArch64Relocator.h \
	${LIBDIR}/Target/AArch64/AArch64TargetMachine.cpp \
	${LIBDIR}/Target/AArch64/AArch64TargetMachine.h \
	${LIBDIR}/Target/AArch64/TargetInfo/AArch64TargetInfo.cpp \
	${LIBDIR}/Target/ARM/ARMDiagnostic.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.h \
	${LIBDIR}/Target/ARM/ARMELFDynamic.cpp \
	${LIBDIR}/Target/ARM/ARMELFDynamic.h \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.h \
	${LIBDIR}/Target/ARM/ARMEmulation.cpp \
	${LIBDIR}/Target/ARM/ARMGNUInfo.h \
	${LIBDIR}/Target/ARM/ARMGOT.cpp \
	${LIBDIR}/Target/ARM/ARMGOT.h \
	${LIBDIR}/Target/ARM/ARM.h \
	${LIBDIR}/Target/ARM/ARMLDBackend.cpp \
	${LIBDIR}/Target/ARM/ARMLDBackend.h \
	${LIBDIR}/Target/ARM/ARMMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.h \
	${LIBDIR}/Target/ARM/ARMRelocationFunctions.h \
	${LIBDIR}/Target/ARM/ARMRelocator.cpp \
	${LIBDIR}/Target/ARM/ARMRelocator.h \
	${LIBDIR}/Target/ARM/ARMTargetMachine.cpp \
	${LIBDIR}/Target/ARM/ARMTargetMachine.h \
	${LIBDIR}/Target/ARM/ARMToARMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToARMStub.h \
	${LIBDIR}/Target/ARM/ARMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToTHMStub.h \
	${LIBDIR}/Target/ARM/TargetInfo/ARMTargetInfo.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.h \
	${LIBDIR}/Target/ARM/THMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/THMToTHMStub.h \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.cpp \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.h \
	${LIBDIR}/Target/Hexagon/HexagonDiagnostic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.h \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.h \
	${LIBDIR}/Target/Hexagon/HexagonEmulation.cpp \
	${LIBDIR}/Target/Hexagon/HexagonEncodings.h \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.h \
	${LIBDIR}/Target/Hexagon/HexagonGOT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOT.h \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.h \
	${LIBDIR}/Target/Hexagon/Hexagon.h \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.cpp \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.h \
	${LIBDIR}/Target/Hexagon/HexagonMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocationFunctions.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.cpp \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.h \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.cpp \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.h \
	${LIBDIR}/Target/Hexagon/TargetInfo/HexagonTargetInfo.cpp \
	${LIBDIR}/Target/Mips/MipsDiagnostic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.h \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.h \
	${LIBDIR}/Target/Mips/MipsEmulation.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.h \
	${LIBDIR}/Target/Mips/MipsGOT.cpp \
	${LIBDIR}/Target/Mips/MipsGOT.h \
	${LIBDIR}/Target/Mips/MipsGOTPLT.cpp \
	${LIBDIR}/Target/Mips/MipsGOTPLT.h \
	${LIBDIR}/Target/Mips/Mips.h \
	${LIBDIR}/Target/Mips/MipsLA25Stub.cpp \
	${LIBDIR}/Target/Mips/MipsLA25Stub.h \
	${LIBDIR}/Target/Mips/MipsLDBackend.cpp \
	${LIBDIR}/Target/Mips/MipsLDBackend.h \
	${LIBDIR}/Target/Mips/MipsMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.h \
	${LIBDIR}/Target/Mips/MipsRelocationFunctions.h \
	${LIBDIR}/Target/Mips/MipsRelocator.cpp \
	${LIBDIR}/Target/Mips/MipsRelocator.h \
	${LIBDIR}/Target/Mips/MipsTargetMachine.cpp \
	${LIBDIR}/Target/Mips/MipsTargetMachine.h \
	${LIBDIR}/Target/Mips/TargetInfo/MipsTargetInfo.cpp \
	${LIBDIR}/Target/X86/TargetInfo/X86TargetInfo.cpp \
	${LIBDIR}/Target/X86/X86Diagnostic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.h \
	${LIBDIR}/Target/X86/X86ELFMCLinker.cpp \
	${LIBDIR}/Target/X86/X86ELFMCLinker.h \
	${LIBDIR}/Target/X86/X86Emulation.cpp \
	${LIBDIR}/Target/X86/X86GNUInfo.h \
	${LIBDIR}/Target/X86/X86GOT.cpp \
	${LIBDIR}/Target/X86/X86GOT.h \
	${LIBDIR}/Target/X86/X86GOTPLT.cpp \
	${LIBDIR}/Target/X86/X86GOTPLT.h \
	${LIBDIR}/Target/X86/X86.h \
	${LIBDIR}/Target/X86/X86LDBackend.cpp \
	${LIBDIR}/Target/X86/X86LDBackend.h \
	${LIBDIR}/Target/X86/X86MCLinker.cpp \
	${LIBDIR}/Target/X86/X86PLT.cpp \
	${LIBDIR}/Target/X86/X86PLT.h \
	${LIBDIR}/Target/X86/X86RelocationFunctions.h \
	${LIBDIR}/Target/X86/X86Relocator.cpp \
	${LIBDIR}/Target/X86/X86Relocator.h \
	${LIBDIR}/Target/X86/X86TargetMachine.cpp \
	${LIBDIR}/Target/X86/X86TargetMachine.h

ANDROID_CPPFLAGS=-fno-rtti -fno-exceptions -Waddress -Wchar-subscripts -Wcomment -Wformat -Wparentheses -Wreorder -Wreturn-type -Wsequence-point -Wstrict-aliasing -Wstrict-overflow=1 -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wunused-function -Wunused-label -Wunused-value -Wunused-variable -Wvolatile-register-var

if ENABLE_WERROR
ANDROID_CPPFLAGS+=-Werror
endif

MCLD_INCLUDES = \
	-I${top_srcdir}/utils/gtest/include \
	-I${top_srcdir}/include \
	-I${top_builddir}/include \
	-I$(INCDIR)/Script

MCLD_CPPFLAGS =  -g -DTOPDIR=\"${abs_top_srcdir}\" -DENABLE_UNITTEST -DMCLD_DEBUG ${LLVM_CPPFLAGS} -DGTEST_HAS_RTTI=0 ${ANDROID_CPPFLAGS}

AM_CPPFLAGS = ${MCLD_CPPFLAGS} ${MCLD_INCLUDES}

lib_LIBRARIES= libmcld.a

libmcld_a_SOURCES = ${SOURCE}

nobase_include_HEADERS = ${HEADER}

