INCDIR = mcld

HEADER = ${INCDIR}/AttributeOption.h \
         ${INCDIR}/BitcodeOption.h \
         ${INCDIR}/Environment.h \
         ${INCDIR}/GeneralOptions.h \
         ${INCDIR}/InputTree.h \
         ${INCDIR}/IRBuilder.h \
         ${INCDIR}/LinkerConfig.h \
         ${INCDIR}/Linker.h \
         ${INCDIR}/LinkerScript.h \
         ${INCDIR}/Module.h \
         ${INCDIR}/TargetOptions.h \
         ${INCDIR}/ADT/BinTree.h \
         ${INCDIR}/ADT/Flags.h \
         ${INCDIR}/ADT/HashBase.h \
         ${INCDIR}/ADT/HashEntryFactory.h \
         ${INCDIR}/ADT/HashEntry.h \
         ${INCDIR}/ADT/HashIterator.h \
         ${INCDIR}/ADT/HashTable.h \
         ${INCDIR}/ADT/SizeTraits.h \
         ${INCDIR}/ADT/StringEntry.h \
         ${INCDIR}/ADT/StringHash.h \
         ${INCDIR}/ADT/TreeAllocator.h \
         ${INCDIR}/ADT/TreeBase.h \
         ${INCDIR}/ADT/TypeTraits.h \
         ${INCDIR}/ADT/Uncopyable.h \
         ${INCDIR}/CodeGen/MCLinker.h \
         ${INCDIR}/CodeGen/TargetMachine.h \
         ${INCDIR}/Fragment/AlignFragment.h \
         ${INCDIR}/Fragment/FillFragment.h \
         ${INCDIR}/Fragment/Fragment.h \
         ${INCDIR}/Fragment/FragmentRef.h \
         ${INCDIR}/Fragment/NullFragment.h \
         ${INCDIR}/Fragment/RegionFragment.h \
         ${INCDIR}/Fragment/Relocation.h \
         ${INCDIR}/Fragment/Stub.h \
         ${INCDIR}/Fragment/TargetFragment.h \
         ${INCDIR}/LD/Archive.h \
         ${INCDIR}/LD/ArchiveReader.h \
         ${INCDIR}/LD/BinaryReader.h \
         ${INCDIR}/LD/BranchIslandFactory.h \
         ${INCDIR}/LD/BranchIsland.h \
         ${INCDIR}/LD/BSDArchiveReader.h \
         ${INCDIR}/LD/DiagnosticEngine.h \
         ${INCDIR}/LD/Diagnostic.h \
         ${INCDIR}/LD/DiagnosticInfos.h \
         ${INCDIR}/LD/DiagnosticLineInfo.h \
         ${INCDIR}/LD/DiagnosticPrinter.h \
         ${INCDIR}/LD/DWARFLineInfo.h \
         ${INCDIR}/LD/DynObjFileFormat.h \
         ${INCDIR}/LD/DynObjReader.h \
         ${INCDIR}/LD/EhFrame.h \
         ${INCDIR}/LD/EhFrameHdr.h \
         ${INCDIR}/LD/EhFrameReader.h \
         ${INCDIR}/LD/ELFBinaryReader.h \
         ${INCDIR}/LD/ELFDynObjFileFormat.h \
         ${INCDIR}/LD/ELFDynObjReader.h \
         ${INCDIR}/LD/ELFExecFileFormat.h \
         ${INCDIR}/LD/ELFFileFormat.h \
         ${INCDIR}/LD/ELFObjectFileFormat.h \
         ${INCDIR}/LD/ELFObjectReader.h \
         ${INCDIR}/LD/ELFObjectWriter.h \
         ${INCDIR}/LD/ELFReader.h \
         ${INCDIR}/LD/ELFReaderIf.h \
         ${INCDIR}/LD/ELFSegmentFactory.h \
         ${INCDIR}/LD/ELFSegment.h \
         ${INCDIR}/LD/GarbageCollection.h \
         ${INCDIR}/LD/GNUArchiveReader.h \
         ${INCDIR}/LD/Group.h \
         ${INCDIR}/LD/GroupReader.h \
         ${INCDIR}/LD/LDContext.h \
         ${INCDIR}/LD/LDFileFormat.h \
         ${INCDIR}/LD/LDReader.h \
         ${INCDIR}/LD/LDSection.h \
         ${INCDIR}/LD/LDSymbol.h \
         ${INCDIR}/LD/MsgHandler.h \
         ${INCDIR}/LD/NamePool.h \
         ${INCDIR}/LD/ObjectReader.h \
         ${INCDIR}/LD/ObjectWriter.h \
         ${INCDIR}/LD/RelocationFactory.h \
         ${INCDIR}/LD/Relocator.h \
         ${INCDIR}/LD/RelocData.h \
         ${INCDIR}/LD/ResolveInfo.h \
         ${INCDIR}/LD/Resolver.h \
         ${INCDIR}/LD/SectionData.h \
         ${INCDIR}/LD/SectionSymbolSet.h \
         ${INCDIR}/LD/StaticResolver.h \
         ${INCDIR}/LD/StubFactory.h \
         ${INCDIR}/LD/TextDiagnosticPrinter.h \
         ${INCDIR}/MC/Attribute.h \
         ${INCDIR}/MC/AttributeSet.h \
         ${INCDIR}/MC/CommandAction.h \
         ${INCDIR}/MC/ContextFactory.h \
         ${INCDIR}/MC/FileAction.h \
         ${INCDIR}/MC/InputAction.h \
         ${INCDIR}/MC/InputBuilder.h \
         ${INCDIR}/MC/InputFactory.h \
         ${INCDIR}/MC/Input.h \
         ${INCDIR}/MC/MCLDDirectory.h \
         ${INCDIR}/MC/SearchDirs.h \
         ${INCDIR}/MC/SymbolCategory.h \
         ${INCDIR}/MC/ZOption.h \
         ${INCDIR}/Object/ObjectBuilder.h \
         ${INCDIR}/Object/ObjectLinker.h \
         ${INCDIR}/Object/SectionMap.h \
         ${INCDIR}/Script/AssertCmd.h \
         ${INCDIR}/Script/Assignment.h \
         ${INCDIR}/Script/BinaryOp.h \
         ${INCDIR}/Script/EntryCmd.h \
         ${INCDIR}/Script/ExprToken.h \
         ${INCDIR}/Script/FileToken.h \
         ${INCDIR}/Script/FlexLexer.h \
         ${INCDIR}/Script/GroupCmd.h \
         ${INCDIR}/Script/InputSectDesc.h \
         ${INCDIR}/Script/InputToken.h \
         ${INCDIR}/Script/NameSpec.h \
         ${INCDIR}/Script/NullaryOp.h \
         ${INCDIR}/Script/Operand.h \
         ${INCDIR}/Script/Operator.h \
         ${INCDIR}/Script/OutputArchCmd.h \
         ${INCDIR}/Script/OutputCmd.h \
         ${INCDIR}/Script/OutputFormatCmd.h \
         ${INCDIR}/Script/OutputSectDesc.h \
         ${INCDIR}/Script/RpnEvaluator.h \
         ${INCDIR}/Script/RpnExpr.h \
         ${INCDIR}/Script/ScriptCommand.h \
         ${INCDIR}/Script/ScriptFile.h \
         ${INCDIR}/Script/ScriptReader.h \
         ${INCDIR}/Script/ScriptScanner.h \
         ${INCDIR}/Script/SearchDirCmd.h \
         ${INCDIR}/Script/SectionsCmd.h \
         ${INCDIR}/Script/StringList.h \
         ${INCDIR}/Script/StrToken.h \
         ${INCDIR}/Script/TernaryOp.h \
         ${INCDIR}/Script/UnaryOp.h \
         ${INCDIR}/Script/WildcardPattern.h \
         ${INCDIR}/Support/Allocators.h \
         ${INCDIR}/Support/CommandLine.h \
         ${INCDIR}/Support/Directory.h \
         ${INCDIR}/Support/ELF.h \
         ${INCDIR}/Support/FileHandle.h \
         ${INCDIR}/Support/FileOutputBuffer.h \
         ${INCDIR}/Support/FileSystem.h \
         ${INCDIR}/Support/GCFactory.h \
         ${INCDIR}/Support/GCFactoryListTraits.h \
         ${INCDIR}/Support/LEB128.h \
         ${INCDIR}/Support/MemoryAreaFactory.h \
         ${INCDIR}/Support/MemoryArea.h \
         ${INCDIR}/Support/MemoryRegion.h \
         ${INCDIR}/Support/MsgHandling.h \
         ${INCDIR}/Support/PathCache.h \
         ${INCDIR}/Support/Path.h \
         ${INCDIR}/Support/raw_ostream.h \
         ${INCDIR}/Support/RealPath.h \
         ${INCDIR}/Support/SystemUtils.h \
         ${INCDIR}/Support/Target.h \
         ${INCDIR}/Support/TargetRegistry.h \
         ${INCDIR}/Support/TargetSelect.h \
         ${INCDIR}/Support/ToolOutputFile.h \
         ${INCDIR}/Support/UniqueGCFactory.h \
         ${INCDIR}/Target/DarwinLDBackend.h \
         ${INCDIR}/Target/ELFAttribute.h \
         ${INCDIR}/Target/ELFAttributeData.h \
         ${INCDIR}/Target/ELFAttributeValue.h \
         ${INCDIR}/Target/ELFDynamic.h \
         ${INCDIR}/Target/ELFDynamic.tcc \
         ${INCDIR}/Target/ELFEmulation.h \
         ${INCDIR}/Target/ELFMCLinker.h \
         ${INCDIR}/Target/GNUInfo.h \
         ${INCDIR}/Target/GNULDBackend.h \
         ${INCDIR}/Target/GOT.h \
         ${INCDIR}/Target/OutputRelocSection.h \
         ${INCDIR}/Target/PLT.h \
         ${INCDIR}/Target/KeyEntryMap.h \
         ${INCDIR}/Target/TargetLDBackend.h

nobase_include_HEADERS = ${HEADER}
